package org.elementarclash.game;

import lombok.Getter;
import org.elementarclash.battlefield.Battlefield;
import org.elementarclash.battlefield.Terrain;
import org.elementarclash.battlefield.terraineffect.TerrainEffectResult;
import org.elementarclash.battlefield.terraineffect.TerrainVisitor;
import org.elementarclash.battlefield.terraineffect.TerrainVisitorFactory;
import org.elementarclash.units.Faction;
import org.elementarclash.game.command.Command;
import org.elementarclash.game.command.CommandExecutor;
import org.elementarclash.game.command.ValidationResult;
import org.elementarclash.game.phase.GameOverPhase;
import org.elementarclash.game.phase.GamePhaseState;
import org.elementarclash.game.phase.SetupPhase;
import org.elementarclash.game.phase.PlayerTurnPhase;
import org.elementarclash.ui.ConsoleGameRenderer;
import org.elementarclash.ui.GameRenderer;
import org.elementarclash.units.Unit;
import org.elementarclash.units.bonus.SynergyBonus;
import org.elementarclash.units.bonus.UnitDecorator;
import org.elementarclash.util.Position;
import org.elementarclash.game.event.*;

import java.util.*;
import java.util.stream.Collectors;

/**
 * Central game manager for ElementarClash.
 * Manages units, game state, turn-based mechanics, and command execution.
 * Coordinates interaction between units and battlefield.
 * <p>
 * Design Pattern: Builder (GoF #2) - see GameBuilder for construction
 * Why: Complex construction with terrain distribution, faction setup, and unit placement.
 * Package-private constructor enforces use of GameBuilder.
 * <p>
 * Design Pattern: Command (GoF #4) - executeCommand() as primary action interface
 * Why: All player actions (move, attack, abilities) are executed as Commands with validation and undo/redo.
 * CommandHistory maintains per-turn action history for rollback capability.
 * <p>
 * Responsibilities:
 * - Unit management (add, remove, query)
 * - Command execution and validation (via Strategy Pattern)
 * - Turn-based game flow (rounds, faction turns, victory conditions)
 * - Game state tracking (SETUP → IN_PROGRESS → GAME_OVER)
 */
@Getter
public class Game {

    private final Battlefield battlefield;
    private final List<Unit> units;
    private final Map<Position, Unit> positionToUnit;
    private final CommandExecutor commandExecutor;
    private final RoundManager roundManager;
    private Faction activeFaction;
    private GamePhaseState currentPhase;
    private final List<GameObserver> observers = new ArrayList<>();

    Game(Battlefield battlefield) {
        this.battlefield = battlefield;
        this.units = new ArrayList<>();
        this.positionToUnit = new HashMap<>();
        this.activeFaction = null;
        this.currentPhase = SetupPhase.getInstance();
        this.commandExecutor = new CommandExecutor();
        this.roundManager = new RoundManager();
    }

    private void transitionToPhase(GamePhaseState newPhase) {
        currentPhase.onExit(this);
        this.currentPhase = newPhase;
        newPhase.onEnter(this);
    }

    /**
     * Start the game (Setup → PlayerTurn).
     */
    public void startGame() {
        if (!(currentPhase instanceof SetupPhase)) {
            throw new IllegalStateException("Can only start game from Setup phase");
        }

        Faction firstFaction = determineFirstFaction();
        this.roundManager.startGame();
        this.activeFaction = firstFaction;
        notifyObservers(new GameStartedEvent());
        transitionToPhase(currentPhase.transitionToPlayerTurn(this, firstFaction));
    }

    /**
     * End current player's turn (PlayerTurn → EventPhase → next PlayerTurn).
     */
    public void endTurn() {
        if (!(currentPhase instanceof PlayerTurnPhase)) {
            throw new IllegalStateException("Can only end turn during PlayerTurn phase");
        }

        // Check victory condition
        if (checkVictoryCondition()) {
            return; // Game is over
        }

        // Notify: current factions turn is ending
        Faction endingFaction = activeFaction;
        notifyObservers(new TurnEndedEvent(endingFaction));

        // Tick Decorators
        for (Unit unit : units) {
            if (unit.isAlive()) {
                for (UnitDecorator decorator : unit.getDecorators()) {
                    decorator.tick();
                }
                unit.removeExpiredDecorators();
            }
        }

        // PlayerTurn → EventPhase
        transitionToPhase(currentPhase.transitionToEventPhase(this));

        // EventPhase → next PlayerTurn
        Faction nextFaction = getNextFaction();
        this.activeFaction = nextFaction;
        transitionToPhase(currentPhase.transitionToPlayerTurn(this, nextFaction));


        if(isFirstFaction(nextFaction)){roundManager.incrementRound();}
        // notify new factions turn is starting
        notifyObservers(new TurnStartedEvent(nextFaction));
    }

    /**
     * Check victory condition and transition to GameOver if met.
     */
    private boolean checkVictoryCondition() {
        Map<Faction, Long> aliveCounts = units.stream()
                .filter(Unit::isAlive)
                .collect(Collectors.groupingBy(Unit::getFaction, Collectors.counting()));

        if (aliveCounts.size() == 1) {
            Faction winner = aliveCounts.keySet().iterator().next();
            transitionToPhase(currentPhase.transitionToGameOver(this, winner));
            notifyObservers(new GameOverEvent(winner));
            return true;
        }
        return false;
    }

    public boolean isPositionOccupied(Position position) {
        return positionToUnit.containsKey(position);
    }

    public void addUnit(Unit unit, Position position) {
        if (isPositionOccupied(position)) {
            return;
        }

        units.add(unit);
        positionToUnit.put(position, unit);
        unit.setPosition(position);
    }

    public void removeUnit(Unit unit) {
        units.remove(unit);
        positionToUnit.remove(unit.getPosition());
    }

    public void moveUnitInternal(Unit unit, Position newPosition) {
        if (!units.contains(unit) || isPositionOccupied(newPosition)) {
            return;
        }
        Position oldPosition = unit.getPosition();

        positionToUnit.remove(unit.getPosition());
        positionToUnit.put(newPosition, unit);
        unit.setPosition(newPosition);

        applyTerrainTransformation(unit);
        notifyObservers(new UnitMovedEvent(unit, oldPosition, newPosition));
    }

    private void applyTerrainTransformation(Unit unit) {
        Terrain terrain = getTerrainAt(unit.getPosition());
        TerrainVisitor visitor = TerrainVisitorFactory.getVisitor(terrain);
        TerrainEffectResult effect = unit.accept(visitor);

        // Listeners: TerrainVisualRenderer, UnitStatRecalculator
        if (effect.terrainChange() != null) {
            battlefield.setTerrainAt(unit.getPosition(), effect.terrainChange(), this);
        }

        // Recalculate synergy bonus (in case unit moved next to allies)
        unit.removeDecoratorsOfType(SynergyBonus.class);
        unit.addDecorator(new SynergyBonus(this, unit.getFaction()));
    }

    public ValidationResult executeCommand(Command command) {
        if (!currentPhase.canExecuteCommand(this, command)) {
            return ValidationResult.failure(
                    "Command not allowed in " + currentPhase.getPhaseName()
            );
        }

        return commandExecutor.execute(command, this);
    }

    public boolean undoLastCommand() {
        return commandExecutor.undo(this);
    }

    public boolean redoLastCommand() {
        return commandExecutor.redo(this);
    }

    public void handleUnitDeath(Unit unit) {
        removeUnit(unit);
        notifyObservers(new UnitDeathEvent(unit)); //Notify Observers before victory Check
        checkVictoryCondition();  // Check if game should end
    }

    public Unit getUnitAt(Position position) {
        return positionToUnit.get(position);
    }

    public List<Unit> getUnitsOfFaction(Faction faction) {
        return units.stream()
                .filter(u -> u.getFaction() == faction)
                .toList();
    }

    public List<Unit> getUnitsAdjacentTo(Position position) {
        return Arrays.stream(position.getAdjacentPositions())
                .filter(Objects::nonNull)
                .filter(this::isPositionOccupied)
                .map(this::getUnitAt)
                .filter(Objects::nonNull)
                .filter(Unit::isAlive)
                .toList();
    }

    public boolean canAttack(Unit attacker, Unit target) {
        return attacker.getAttackStrategy().canAttack(this, attacker, target);
    }

    public boolean isValidMove(Unit unit, Position target) {
        return unit.getMovementStrategy().canMoveTo(this, unit.getPosition(), target, unit.getMovement());
    }

    public Terrain getTerrainAt(Position position) {
        return battlefield.getTerrainAt(position);
    }

    public int getRoundNumber() {
        return roundManager.getRoundNumber();
    }

    void setInitialActiveFaction(Faction faction) {
        this.activeFaction = faction;
    }


    private Faction determineFirstFaction() {
        return units.stream()
                .map(Unit::getFaction)
                .findFirst()
                .orElseThrow(() -> new IllegalStateException("No units on battlefield"));
    }

    private Faction getNextFaction() {
        // Simple round-robin
        Faction[] allFactions = units.stream()
                .filter(Unit::isAlive)
                .map(Unit::getFaction)
                .distinct()
                .toArray(Faction[]::new);

        for (int i = 0; i < allFactions.length; i++) {
            if (allFactions[i] == activeFaction) {
                return allFactions[(i + 1) % allFactions.length];
            }
        }

        return allFactions[0];
    }

    /**
     * Checks if the given faction is the first in the current turn order.
     * Used to determine when a round ends.
     *
     * @param faction Faction to check
     * @return true if this is the first faction in turn order
     */
    private boolean isFirstFaction(Faction faction) {
        List<Faction> aliveFactions = getAliveFactions();
        return !aliveFactions.isEmpty() && aliveFactions.get(0).equals(faction);
    }

    public void nextTurn() {
        resetCurrentFactionUnits();
        applyPerTurnTerrainEffects();

        // Transition to next faction and notify
        endTurn(); // <- dispatched TurnEndedEvent
    }

    private void applyPerTurnTerrainEffects() {
        for (Unit unit : units) {
            if (!unit.isAlive()) {
                continue;
            }

            Terrain terrain = battlefield.getTerrainAt(unit.getPosition());
            TerrainVisitor visitor =
                TerrainVisitorFactory.getVisitor(terrain);
            TerrainEffectResult effect = unit.accept(visitor);

            if (effect.hasPerTurnEffect()) {
                int hpChange = effect.hpPerTurn();
                if (hpChange > 0) {
                    unit.heal(hpChange);
                } else {
                    unit.takeDamage(-hpChange); // Convert negative to positive
                }
            }
        }
    }

    /**
     * Get list of all factions that have alive units, in consistent order.
     *
     * @return List of alive factions (ordered consistently)
     */
    private List<Faction> getAliveFactions() {
        return units.stream()
                .filter(Unit::isAlive)
                .map(Unit::getFaction)
                .distinct()
                .sorted()
                .toList();
    }

    private void resetCurrentFactionUnits() {
        getUnitsOfFaction(activeFaction).forEach(Unit::resetTurn);
        commandExecutor.clearHistory();
    }

    public Faction getWinner() {
        if (!isGameFinished()) {
            return null;
        }

        return findRemainingFaction();
    }

    private boolean isGameFinished() {
        return currentPhase instanceof GameOverPhase;
    }

    private Faction findRemainingFaction() {
        return getAliveFactions().stream()
                .findFirst()
                .orElse(null);
    }

    private static final GameRenderer RENDERER = new ConsoleGameRenderer();

    @Override
    public String toString() {
        return RENDERER.render(this);
    }

    // ===== OBSERVER PATTERN METHODS =====

    public void addObserver(GameObserver observer) {
        observers.add(observer);
    }

    public void removeObserver(GameObserver observer) {
        observers.remove(observer);
    }

    public void notifyObservers(GameEvent event) {
        for (GameObserver observer : observers) {
            observer.onEvent(event);
        }
    }

    public void notifyTerrainChanged(Position position, Terrain oldTerrain, Terrain newTerrain) {
        notifyObservers(new TerrainChangedEvent(position, oldTerrain, newTerrain));
    }
}
