@startuml State Pattern - ElementarClash

!define ABSTRACT_CLASS abstract class
!define INTERFACE interface

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<State>> LightYellow
    BorderColor<<State>> DarkOrange
    BackgroundColor<<ConcreteState>> LightBlue
    BorderColor<<ConcreteState>> DarkBlue
    BackgroundColor<<Context>> LightGreen
    BorderColor<<Context>> DarkGreen
}


' ===== State Interface =====
INTERFACE GamePhaseState <<State>> {
    + canExecuteCommand(game: Game, command: Command): boolean
    + onEnter(game: Game): void
    + onExit(game: Game): void
    + transitionToPlayerTurn(game: Game, faction: Faction): GamePhaseState
    + transitionToEventPhase(game: Game): GamePhaseState
    + transitionToGameOver(game: Game, winner: Faction): GamePhaseState
    + getPhaseName(): String
}

' ===== Concrete State (exemplarisch) =====
class "PlayerTurnPhase\n<<record>>" as PlayerTurnPhase <<ConcreteState>> {
    + activeFaction: Faction
    __
    + PlayerTurnPhase(activeFaction: Faction)
    __
    + canExecuteCommand(game: Game, command: Command): boolean
    + onEnter(game: Game): void
    + onExit(game: Game): void
    + transitionToPlayerTurn(game: Game, faction: Faction): GamePhaseState
    + transitionToEventPhase(game: Game): GamePhaseState
    + transitionToGameOver(game: Game, winner: Faction): GamePhaseState
    + getPhaseName(): String
}

' ===== Context =====
class Game <<Context>> {
    - currentPhase: GamePhaseState
    - activeFaction: Faction
    - roundManager: RoundManager
    __
    + startGame(): void
    + endTurn(): void
    + executeCommand(command: Command): ValidationResult
    - transitionToPhase(newPhase: GamePhaseState): void
    - checkVictoryCondition(): boolean
    - determineFirstFaction(): Faction
    - getNextFaction(): Faction
}

class RoundManager {
    - roundNumber: int
    __
    + startGame(): void
    + incrementRound(): void
    + getRoundNumber(): int
}

' ===== Inheritance =====
GamePhaseState <|.. PlayerTurnPhase

' ===== Associations =====
Game *-right-> GamePhaseState : currentPhase
Game *--> RoundManager

@enduml
